# Enterprise-Knowledge-Retrieval-Synthesis-Platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.py  setup.cfg
.github/workflows/: ci-cd.yml
config/: development.env  mlflow_config.py  production.env
docker/: Dockerfile  Dockerfile.multi
frontend/: .env.example  .eslintrc.json  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/architecture/: page.tsx
frontend/src/components/: Common.tsx  DocumentUpload.tsx  Hero.tsx  Navbar.tsx  QueryInput.tsx  QueryResults.tsx
frontend/src/styles/: globals.css
monitoring/: prometheus.yml
notebooks/: 01_data_exploration.py
src/: __init__.py  main.py
src/api/: __init__.py  routes.py  schemas.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  models.py  postgres_client.py
src/embeddings/: __init__.py  embedding_service.py  vector_store.py  vector_store_new.py
src/ingestion/: __init__.py  chunker.py  document_loader.py
src/models/: __init__.py
src/monitoring/: __init__.py  metrics.py  mlflow_tracker.py
src/rag/: __init__.py  hybrid_retriever.py  reranker.py  retriever.py
src/utils/: __init__.py
tests/: test_basic.py
